miracle_ws/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: miracle-system
  labels:
    app.kubernetes.io/part-of: miracle
    app.kubernetes.io/managed-by: kustomize
